--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -5,8 +5,11 @@ components:
   name: card_content
   layout_properties: {grid_position: 'XRVMCJ,PZWRJA', full_width_row: true}
   components:
-  - type: ColumnPanel
-    properties: {col_widths: '{}'}
+  - type: Link
+    properties: {role: null, width: default, align: left, border: '', foreground: '',
+      visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
+      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: ''}
     name: game_summary
     layout_properties: {}
     components:
@@ -16,7 +19,7 @@ components:
         icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
         underline: false, icon: ''}
       name: you_label
-      layout_properties: {grid_position: 'ATISUB,XIQPDA'}
+      layout_properties: {grid_position: 'JXMJZB,RSPGUA'}
       data_bindings: []
     - type: Label
       properties: {role: null, width: default, align: right, border: '', foreground: '',
@@ -24,7 +27,8 @@ components:
         spacing_below: small, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: num_throws
-      layout_properties: {grid_position: 'ATISUB,HXBIMS'}
+      layout_properties: {grid_position: 'JXMJZB,KGTRPK'}
+    event_bindings: {click: expand}
   - type: LinearPanel
     properties: {role: null, width: default, border: '', foreground: '', visible: true,
       row_spacing: 10, spacing_above: small, spacing_below: small, background: ''}
