--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -8,14 +8,15 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: ''}
+      spacing_above: small, icon_align: left, col_widths: '{"RSPGUA":30,"KGTRPK":30}',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: game_summary
     layout_properties: {}
     components:
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: Go to wall, font_size: 22, font: '', spacing_above: small,
+        visible: true, text: Go to wall, font_size: 18, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
         underline: false, icon: ''}
       name: you_label
