--- a/forms/_login.yaml
+++ b/forms/_login.yaml
@@ -25,7 +25,7 @@ container:
       \ #000000;\n }\n\n .placeholder {\n     padding: 5px;\n     border: 2px dashed\
       \ #888;\n }\n\n .nav {\n     position: absolute;\n     top: 0;\n     left: 0;\n\
       \     width: 100%;\n     background-color: white;\n     padding: 11px 16px 11px;\
-      \ /* expect 5px margin */\n     height: 62px;\n     font-size: 20px;\n\n   \
+      \ /* expect 5px margin */\n     height: 62px;\n     font-size: 18px;\n\n   \
       \  overflow-y: hidden;\n\n     color: #009640; \n     text-transform: uppercase;\n\
       \     font-weight: bold;\n\n     box-shadow: 0 1px 3px #888;\n\n\n     -webkit-touch-callout:\
       \ none;\n     -webkit-user-select: none;\n     -khtml-user-select: none;\n \
@@ -57,36 +57,37 @@ container:
       \ .sidebar-elt>.content a {\n     font-size: 16px;\n     color:white;\n    \
       \ text-transform: uppercase;\n }\n \n .sidebar-elt>.content a:hover {\n    \
       \ background: #444;\n }\n\n .sidebar-elt .content a.anvil-component {\n    \
-      \ padding-left: 14px;\n     padding-right: 14px;\n }\n\n .sidebar-elt a {\n\
-      \     color: #ddd;\n }\n\n .sidebar-elt a:hover, .sidebar-elt a:active {\n \
-      \    color: white;\n }\n\n .cards {\n     flex-grow: 1;\n\n     font-weight:\
-      \ bold;\n     font-color: #555;\n     font-size: 24px;\n\n     padding: 8px\
-      \ 8px;\n     max-width: 100%;\n }\n\n .cards > .anvil-container {\n     outline:\
-      \ none !important;\n }\n\n .cards .anvil-container .anvil-container,\n .designer\
+      \ padding-left: 0px;\n     padding-right: 0px;\n }\n\n .sidebar-elt a {\n  \
+      \   color: #ddd;\n }\n\n .sidebar-elt a:hover, .sidebar-elt a:active {\n   \
+      \  color: white;\n }\n\n .cards {\n     flex-grow: 1;\n\n     font-weight: bold;\n\
+      \     font-color: #555;\n     font-size: 24px;\n\n     padding: 0px 0px;\n \
+      \    max-width: 100%;\n }\n\n .cards > .anvil-container {\n     outline: none\
+      \ !important;\n }\n\n .cards .anvil-container .anvil-container,\n .designer\
       \ .anvil-highlight .cards .anvil-container .anvil-container {\n     background-color:\
       \ white;\n     box-shadow: 1px 2px 4px #888;\n\n     /* Font back to defaults\
       \ */\n     font-weight: normal;\n     /*color: #333;*/\n     font-size: 14px;\n\
-      \n     outline: none;\n\n     padding: 7px 0;\n }\n\n .designer .anvil-highlight\
+      \n     outline: none;\n\n     padding: 0px 0;\n }\n\n .designer .anvil-highlight\
       \ .cards .anvil-container .anvil-container .anvil-container,\n .cards .anvil-container\
       \ .anvil-container .anvil-container {\n     box-shadow: none;\n     background-color:\
       \ transparent;\n     padding: 0;\n }\n\n .designer .anvil-highlight .cards .anvil-container\
       \ .anvil-container .anvil-container {\n     outline: 1px dashed rgba(0,0,0,0.3)\n\
-      \ }\n\n .body .instructions {\n     padding: 24px 16px;\n     font-size: 14px;\n\
-      \     text-align: center;\n     color: #666;\n }\n\n /* Responsive bits: Make\
-      \ the menu overlay the screen\n    (and hidden by default) rather than displacing\
-      \ it\n    on small screens\n  */\n\n @media(max-width:767px) {\n     .runner\
-      \ .sidebar {\n\t display: none;\n\t position: absolute;\n\t top: 62px;\n\t bottom:\
-      \ 0px;\n\t left: 0px;\n\t z-index: 2;\n     }\n\n     .runner .sidebar-click-guard\
-      \ {\n\t display: none;\n\t position: absolute;\n\t top: 62px;\n\t bottom: 0px;\n\
-      \t left: 0;\n\t right: 0;\n\t background-color: #888;\n\t opacity: 0.5;\n\t\
-      \ z-index: 1;\n     }\n\n     .designer .sidebar {\n\t max-width: 30%;\n   \
-      \  }\n\n     .sidebar.floating {\n\t top: 62px;\n     }\n\n     body.anvil-show-banner\
+      \ }\n\n .body .instructions {\n     padding: 0px !important;\n     font-size:\
+      \ 14px;\n     text-align: center;\n     color: #666;\n }\n\n /* Responsive bits:\
+      \ Make the menu overlay the screen\n    (and hidden by default) rather than\
+      \ displacing it\n    on small screens\n  */\n\n @media(max-width:767px) {\n\
+      \     .runner .sidebar {\n\t display: none;\n\t position: absolute;\n\t top:\
+      \ 62px;\n\t bottom: 0px;\n\t left: 0px;\n\t z-index: 2;\n     }\n\n     .runner\
+      \ .sidebar-click-guard {\n\t display: none;\n\t position: absolute;\n\t top:\
+      \ 62px;\n\t bottom: 0px;\n\t left: 0;\n\t right: 0;\n\t background-color: #888;\n\
+      \t opacity: 0.5;\n\t z-index: 1;\n     }\n\n     .designer .sidebar {\n\t max-width:\
+      \ 30%;\n     }\n\n     .sidebar.floating {\n\t top: 62px;\n     }\n\n     body.anvil-show-banner\
       \ .sidebar.floating {\n\t top: 112px;\n     }\n\n     .cards {\n\t padding:\
-      \ 24px 0px;\n\t height: 250px;\n     }\n\n }\n\n .sidebar.floating {\n     position:\
-      \ absolute;\n     top: 62px;\n     bottom: 0px;\n     left: 0px;\n     z-index:\
-      \ 2;\n }\n\n body.anvil-show-banner .sidebar.floating {\n     top: 112px;\n\
-      \ }\n\n\n</style>\n\n<script>\n function toggleSidebar() {\n     var s = $('.sidebar');\n\
-      \     if (!s.is(':hidden')) {\n\t $('.sidebar-click-guard').hide();\n\t s.addClass('floating').animate({left:\
+      \ 0px;\n     }\n\n     .col-padding {\n\t padding: 0px;\n\t margin: 0px;\n\n\
+      \ }\n\n .sidebar.floating {\n     position: absolute;\n     top: 62px;\n   \
+      \  bottom: 0px;\n     left: 0px;\n     z-index: 2;\n }\n\n body.anvil-show-banner\
+      \ .sidebar.floating {\n     top: 112px;\n }\n\n\n</style>\n\n<script>\n function\
+      \ toggleSidebar() {\n     var s = $('.sidebar');\n     if (!s.is(':hidden'))\
+      \ {\n\t $('.sidebar-click-guard').hide();\n\t s.addClass('floating').animate({left:\
       \ -s.width()}, {complete: function() { s.hide(); }});\n     } else {\n\t $('.sidebar-click-guard').show();\n\
       \t s.show().addClass('floating').css('left', '-100%').css('left', -s.width())\n\
       \t  .animate({left: 0}, {complete: function() { s.removeClass('floating'); }});\n\
