--- a/forms/GameListContacts.yaml
+++ b/forms/GameListContacts.yaml
@@ -1,6 +1,8 @@
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: mobile, spacing_above: none, col_widths: '{}', spacing_below: none,
+    background: ''}
   name: card_content
   layout_properties: {grid_position: 'QUMGQI,KEWNOY'}
   components:
@@ -14,8 +16,8 @@ components:
     components:
     - type: Label
       properties: {role: null, width: default, align: center, border: '', foreground: '',
-        visible: true, text: Add New Friends!, font_size: 22, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        visible: true, text: Add New Friends!, font_size: 22, font: '', spacing_above: none,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
         underline: false, icon: ''}
       name: you_label
       layout_properties: {grid_position: 'ZWEYBN,SJLVYU'}
