--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -13,36 +13,37 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+      spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
       italic: false, background: '', bold: false, underline: false, icon: ''}
     name: game_summary
     layout_properties: {grid_position: 'VCCQBS,OLBDSW', full_width_row: true}
     components:
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: '', font_size: 18, font: '', spacing_above: small, icon_align: left,
-        spacing_below: small, italic: false, background: '', bold: true, underline: false,
+        visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: true, underline: false,
         icon: ''}
       name: you_label
       layout_properties: {grid_position: 'ZWEYBN,SJLVYU'}
       data_bindings: []
     - type: Label
       properties: {role: null, width: default, align: right, border: '', foreground: '',
-        visible: true, text: '', font_size: 18, font: '', spacing_above: small, icon_align: left,
-        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: num_throws
-      layout_properties: {grid_position: 'ZWEYBN,CYDJHW'}
+      layout_properties: {grid_position: 'ZWEYBN,RKVLTS'}
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: '', font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+        visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: status_label
       layout_properties: {grid_position: 'GTABZO,NIXFKP'}
     event_bindings: {click: expand}
   - type: LinearPanel
-    properties: {}
+    properties: {role: null, width: default, border: '', foreground: '', visible: true,
+      row_spacing: 10, spacing_above: none, spacing_below: none, background: ''}
     name: game_view
     layout_properties: {}
 item_type: {table_id: 7128}
