--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -14,21 +14,21 @@ components:
   components:
   - type: Canvas
     properties: {role: null, width: default, height: '100', border: '', foreground: '',
-      visible: true, spacing_above: small, spacing_below: small, background: '#82abc7'}
+      visible: true, spacing_above: none, spacing_below: none, background: '#82abc7'}
     name: canvas_1
     layout_properties: {grid_position: 'BCMADU,PJNASK', full_width_row: true}
   event_bindings: {click: throw_button_click}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: true, underline: false,
+    visible: true, text: '', font_size: null, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: true, underline: false,
     icon: ''}
   name: p0_name
   layout_properties: {grid_position: 'FDTRQJ,QGMGLS', full_width_row: false}
 - type: Label
   properties: {role: null, width: default, align: right, border: '', foreground: '',
-    visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: true, underline: false,
+    visible: true, text: '', font_size: null, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: true, underline: false,
     icon: ''}
   name: p1_name
   layout_properties: {grid_position: 'FDTRQJ,YOVYYG', full_width_row: false}
