--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -16,7 +16,7 @@ components:
     components:
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: Go to wall, font_size: 16, font: '', spacing_above: small,
+        visible: true, text: Play wall ball, font_size: 16, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
         underline: false, icon: ''}
       name: you_label
