--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -7,14 +7,14 @@ components:
   name: label_get_contacts
   layout_properties: {grid_position: 'OROBJO,DMOCEV'}
 - type: Label
-  properties: {role: null, width: default, align: left, border: '', foreground: '',
+  properties: {role: null, width: default, align: center, border: '', foreground: '',
     visible: true, text: 'Phone number:', font_size: 18, font: '', spacing_above: none,
     icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   name: label_phone
   layout_properties: {grid_position: 'POHKFA,HZRNRF SJFJRO,LYGERS'}
 - type: Button
-  properties: {role: null, width: default, align: left, border: '', enabled: true,
+  properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: true, text: 'Why do we need this?', font_size: 10, font: '',
     spacing_above: small, icon_align: left, spacing_below: medium, italic: true, background: '',
     bold: false, underline: false, icon: ''}
@@ -22,15 +22,15 @@ components:
   layout_properties: {grid_position: 'POHKFA,HZRNRF ARIZFO,YSQFPJ'}
   event_bindings: {click: why_phone_click}
 - type: TextBox
-  properties: {role: null, width: default, align: left, hide_text: false, placeholder: '1234567890',
+  properties: {role: null, width: default, align: center, hide_text: false, placeholder: '1234567890',
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 18,
-    font: '', spacing_above: none, type: telephone, spacing_below: small, italic: false,
+    font: '', spacing_above: none, type: telephone, spacing_below: medium, italic: false,
     background: '', bold: false, underline: false}
   name: phone
   layout_properties: {grid_position: 'POHKFA,GVXPJM'}
   event_bindings: {pressed_enter: phone_pressed_enter}
 - type: Button
-  properties: {role: null, width: default, align: right, border: '', enabled: true,
+  properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: true, text: Add Contact, font_size: null, font: '', spacing_above: none,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
     underline: false, icon: ''}
@@ -44,5 +44,5 @@ components:
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: medium, col_widths: '{}', spacing_below: small,
+    row_spacing: 10, wrap_on: mobile, spacing_above: medium, col_widths: '{}', spacing_below: small,
     background: ''}
