--- a/forms/GameListContacts.yaml
+++ b/forms/GameListContacts.yaml
@@ -9,7 +9,7 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: none,
       italic: false, background: '', bold: false, underline: false, icon: ''}
     name: game_summary
     layout_properties: {grid_position: 'VCCQBS,OLBDSW'}
@@ -26,7 +26,7 @@ components:
   - type: ColumnPanel
     properties: {}
     name: game_view
-    layout_properties: {grid_position: 'PUYBPX,ENQFEK'}
+    layout_properties: {grid_position: 'PUYBPX,CCZRBG'}
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
