--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"QGMGLS":15,"YOVYYG":22}',
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"QGMGLS":20,"YOVYYG":21}',
     spacing_below: small, background: ''}
 components:
 - type: Link
@@ -20,15 +20,15 @@ components:
   event_bindings: {click: throw_button_click}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: '', font_size: null, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: true, underline: false,
+    visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: p0_name
   layout_properties: {grid_position: 'FDTRQJ,QGMGLS', full_width_row: false}
 - type: Label
   properties: {role: null, width: default, align: right, border: '', foreground: '',
-    visible: true, text: '', font_size: null, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: true, underline: false,
+    visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: p1_name
   layout_properties: {grid_position: 'FDTRQJ,YOVYYG', full_width_row: false}
