--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -24,14 +24,14 @@ components:
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: p0_name
-  layout_properties: {grid_position: 'FDTRQJ,QGMGLS', full_width_row: false}
+  layout_properties: {grid_position: 'FDTRQJ,QGMGLS', full_width_row: true}
 - type: Label
   properties: {role: null, width: default, align: right, border: '', foreground: '',
     visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: p1_name
-  layout_properties: {grid_position: 'FDTRQJ,YOVYYG', full_width_row: false}
+  layout_properties: {grid_position: 'FDTRQJ,YOVYYG', full_width_row: true}
 - type: Timer
   properties: {interval: 0.2}
   name: timer_1
