--- a/forms/_play.yaml
+++ b/forms/_play.yaml
@@ -61,14 +61,14 @@ container:
       \ rel=\"stylesheet\">\n\n<style>\n body * {\n     box-sizing: border-box;\n\
       \ }\n\n body {\n     background-color: #d7d7d7;\n     font-family: \"Roboto\"\
       ;\n     margin: 0;\n     min-height: 100%;\n }\n\n body.anvil-show-banner {\n\
-      \     margin-top: 0;\n }\n\n a, a:visited {\n     color: #009688;\n }\n\n a:hover,\
-      \ a:active, a:focus {\n     color: #00796B; /* Material design: Teal 700 */\n\
+      \     margin-top: 0;\n }\n\n a, a:visited {\n     color: #000000;\n }\n\n a:hover,\
+      \ a:active, a:focus {\n     color: #000000; /* Material design: Teal 700 */\n\
       \ }\n\n .placeholder {\n     padding: 5px;\n     border: 2px dashed #888;\n\
-      \ }\n\n .col-padding {\n     padding: 0px !important;\n }\n \n .nav {\n    \
+      \ }\n\n .col-padding {\n     padding: 5px !important;\n }\n \n .nav {\n    \
       \ position: absolute;\n     top: 0;\n     left: 0;\n     width: 100%;\n    \
       \ background-color: white;\n     padding: 11px 16px 11px; /* expect 5px margin\
       \ */\n     height: 62px;\n     font-size: 16px;\n\n     overflow-y: hidden;\n\
-      \n     color: #009688; /* Material Design: \"Teal 500\" */\n     text-transform:\
+      \n     color: #009640; /* Material Design: \"Teal 500\" */\n     text-transform:\
       \ uppercase;\n     font-weight: bold;\n\n     box-shadow: 0 1px 3px #888;\n\n\
       \n     -webkit-touch-callout: none;\n     -webkit-user-select: none;\n     -khtml-user-select:\
       \ none;\n     -moz-user-select: none;\n     -ms-user-select: none;\n     user-select:\
@@ -124,14 +124,13 @@ container:
       \ z-index: 1;\n     }\n\n     .designer .sidebar {\n\t max-width: 30%;\n   \
       \  }\n\n     .sidebar.floating {\n\t top: 62px;\n     }\n\n     body.anvil-show-banner\
       \ .sidebar.floating {\n\t top: 112px;\n     }\n\n     .cards {\n\t padding:\
-      \ 0px !important;\n\t height: 250px;\n     }\n\n }\n\n .sidebar.floating {\n\
-      \     position: absolute;\n     top: 62px;\n     bottom: 0px;\n     left: 0px;\n\
-      \     z-index: 2;\n }\n\n body.anvil-show-banner .sidebar.floating {\n     top:\
-      \ 112px;\n }\n\n\n</style>\n\n<script>\n function toggleSidebar() {\n     var\
-      \ s = $('.sidebar');\n     if (!s.is(':hidden')) {\n\t $('.sidebar-click-guard').hide();\n\
-      \t s.addClass('floating').animate({left: -s.width()}, {complete: function()\
-      \ { s.hide(); }});\n     } else {\n\t $('.sidebar-click-guard').show();\n\t\
-      \ s.show().addClass('floating').css('left', '-100%').css('left', -s.width())\n\
+      \ 10px !important;\n     }\n\n }\n\n .sidebar.floating {\n     position: absolute;\n\
+      \     top: 62px;\n     bottom: 0px;\n     left: 0px;\n     z-index: 2;\n }\n\
+      \n body.anvil-show-banner .sidebar.floating {\n     top: 112px;\n }\n\n\n</style>\n\
+      \n<script>\n function toggleSidebar() {\n     var s = $('.sidebar');\n     if\
+      \ (!s.is(':hidden')) {\n\t $('.sidebar-click-guard').hide();\n\t s.addClass('floating').animate({left:\
+      \ -s.width()}, {complete: function() { s.hide(); }});\n     } else {\n\t $('.sidebar-click-guard').show();\n\
+      \t s.show().addClass('floating').css('left', '-100%').css('left', -s.width())\n\
       \t  .animate({left: 0}, {complete: function() { s.removeClass('floating'); }});\n\
       \     }\n }\n\n $(function() {\n     $('.sidebar').click(function() {\n\t if\
       \ (window.innerWidth <= 767) {\n\t     toggleSidebar();\n\t }\n     });\n  \
