--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -1,15 +1,15 @@
 components:
 - type: LinearPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, spacing_above: small, spacing_below: small, background: ''}
+    row_spacing: 10, spacing_above: none, spacing_below: none, background: ''}
   name: card_content
   layout_properties: {grid_position: 'XRVMCJ,PZWRJA', full_width_row: true}
   components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: small, icon_align: left, col_widths: '{"RSPGUA":35,"KGTRPK":25}',
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      spacing_above: none, icon_align: left, col_widths: '{"RSPGUA":35,"KGTRPK":25}',
+      spacing_below: none, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: game_summary
     layout_properties: {}
@@ -38,5 +38,5 @@ components:
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
