--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -1,13 +1,13 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"QGMGLS":20,"YOVYYG":21}',
-    spacing_below: small, background: ''}
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{"QGMGLS":20,"YOVYYG":21}',
+    spacing_below: none, background: ''}
 components:
 - type: Link
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_1
   layout_properties: {grid_position: 'OKBFUH,MQQUEU', full_width_row: true}
