--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -17,7 +17,7 @@ components:
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
         visible: true, text: Play wall ball, font_size: 16, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: you_label
       layout_properties: {grid_position: 'JXMJZB,RSPGUA'}
