--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -13,10 +13,10 @@ components:
   layout_properties: {grid_position: 'OKBFUH,MQQUEU', full_width_row: true}
   components:
   - type: Canvas
-    properties: {role: null, width: default, height: '120', border: '', foreground: '',
+    properties: {role: null, width: default, height: '200', border: '', foreground: '',
       visible: true, spacing_above: none, spacing_below: none, background: '#82abc7'}
     name: canvas_1
-    layout_properties: {grid_position: 'BCMADU,PJNASK', full_width_row: true}
+    layout_properties: {grid_position: 'BCMADU,KEUMME', full_width_row: true}
   event_bindings: {click: throw_button_click}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
