--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -32,9 +32,9 @@ components:
   event_bindings: {click: explain_phone}
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: (123) 456-7890,
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-    font: '', spacing_above: small, type: telephone, spacing_below: small, italic: false,
-    background: '', bold: false, underline: false}
+    border: '', enabled: true, foreground: '', visible: true, text: '5555555555',
+    font_size: null, font: '', spacing_above: small, type: telephone, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false}
   name: phone
   layout_properties: {grid_position: 'KWIYLI,OXHEKA'}
   event_bindings: {pressed_enter: phone_pressed_enter}
@@ -47,7 +47,7 @@ components:
   layout_properties: {grid_position: 'POHKFA,HZRNRF'}
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: password,
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    border: '', enabled: true, foreground: '', visible: true, text: password, font_size: null,
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: password
