--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -35,7 +35,7 @@ components:
     icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
     underline: false, icon: ''}
   name: go_button
-  layout_properties: {grid_position: 'POHKFA,PHDVEA', row_background: ''}
+  layout_properties: {grid_position: 'VYLWEW,KONKYM', row_background: ''}
   event_bindings: {click: add_connection}
 - type: Timer
   properties: {interval: 10}
@@ -44,5 +44,5 @@ components:
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: medium, col_widths: '{}', spacing_below: small,
+    row_spacing: 10, wrap_on: never, spacing_above: medium, col_widths: '{}', spacing_below: small,
     background: ''}
