updated html to file

--- a/forms/_play.yaml
+++ b/forms/_play.yaml
@@ -57,107 +57,4 @@ components:
   event_bindings: {tick: timer_1_tick}
 container:
   type: HtmlTemplate
-  properties: {html: "<link href=\"https://fonts.googleapis.com/css?family=Roboto\"\
-      \ rel=\"stylesheet\">\n\n<style>\n body * {\n     box-sizing: border-box;\n\
-      \ }\n\n body {\n     background-color: #d7d7d7;\n     font-family: \"Roboto\"\
-      ;\n     margin: 0;\n     min-height: 100%;\n }\n\n body.anvil-show-banner {\n\
-      \     margin-top: 0;\n }\n\n a, a:visited {\n     color: #000000;\n }\n\n a:hover,\
-      \ a:active, a:focus {\n     color: #000000; /* Material design: Teal 700 */\n\
-      \ }\n\n .placeholder {\n     padding: 2px;\n     border: 2px dashed #888;\n\
-      \ }\n\n .col-padding {\n     padding: 5px !important;\n }\n \n .nav {\n    \
-      \ position: absolute;\n     top: 0;\n     left: 0;\n     width: 100%;\n    \
-      \ background-color: white;\n     padding: 11px 16px 11px; /* expect 5px margin\
-      \ */\n     height: 62px;\n     font-size: 16px;\n\n     overflow-y: hidden;\n\
-      \n     color: #009640; /* Material Design: \"Teal 500\" */\n     text-transform:\
-      \ uppercase;\n     font-weight: bold;\n\n     box-shadow: 0 1px 3px #888;\n\n\
-      \n     -webkit-touch-callout: none;\n     -webkit-user-select: none;\n     -khtml-user-select:\
-      \ none;\n     -moz-user-select: none;\n     -ms-user-select: none;\n     user-select:\
-      \ none;\n }\n\n body.anvil-show-banner .nav {\n     top: 50px;\n }\n\n .nav\
-      \ .title, .nav .menu-btn {\n     display: inline-block;\n     vertical-align:\
-      \ top;\n     margin-left: 7px;\n }\n .nav .menu-btn, .nav .title.placeholder\
-      \ {\n     margin-top: 5px;\n     margin-left: 0;\n }\n\n .nav > .menu-btn {\n\
-      \     color: #333;\n     cursor: pointer;\n     width: 32px;\n     height: 32px;\n\
-      \     border-radius: 16px;\n     padding: 5px;\n     margin-top: 7px;\n    \
-      \ text-align: center;\n }\n\n .nav > .menu-btn:hover {\n     background-color:\
-      \ #ccc;\n }\n\n .nav-right {\n     float: right;\n     color: #333;\n }\n\n\
-      \ .nav-elt {\n     display: inline-block;\n     vertical-align: top;\n     margin-left:\
-      \ 10px;\n     position: relative;\n }\n\n .nav-elt.placeholder {\n     margin-top:\
-      \ 5px;\n     opacity: 0.8;\n     color: #888;\n     visibility: hidden;\n }\n\
-      \n body.anvil-highlight .nav-elt.placeholder {\n     visibility: visible;\n\
-      \ }\n\n .nav-elt .drop-here {\n     position: absolute;\n     top: 0;\n    \
-      \ left: -7.5px;\n     bottom: 0;\n     width: 5px;\n }\n\n .body {\n     position:\
-      \ relative;\n     padding-top: 62px;\n     width: 100%;\n     display: flex;\n\
-      \     flex-direction: row;\n     align-items: stretch;\n     min-height: 100vh;\n\
-      \ }\n\n body.anvil-show-banner .body {\n     padding-top: 112px; /* 62px navbar\
-      \ + 50px \"Anvil free\" banner */\n }\n\n .sidebar {\n     background-color:\
-      \ #333;\n     color: white;\n     padding: 10px 0;\n     flex-shrink: 0;\n\n\
-      \     overflow-y: auto;\n     overflow-x: hidden;\n }\n\n .sidebar .placeholder\
-      \ {\n     text-align: center;\n }\n\n .sidebar-elt::first {\n     border-top:\
-      \ 1px solid #888;\n }\n\n .sidebar-elt {\n     position: relative;\n     border-bottom:\
-      \ 1px solid #888;\n }\n\n .sidebar-elt .drop-here {\n     position: absolute;\n\
-      \     top: -8px;\n     left: 0;\n     right: 0;\n     height: 5px;\n }\n \n\
-      \ .sidebar-elt>.content a {\n     font-size: 16px;\n     color:white;\n    \
-      \ text-transform: uppercase;\n }\n \n .sidebar-elt>.content a:hover {\n    \
-      \ background: #444;\n }\n\n .sidebar-elt .content a.anvil-component {\n    \
-      \ padding-left: 14px;\n     padding-right: 14px;\n }\n\n .sidebar-elt a {\n\
-      \     color: #ddd;\n }\n\n .sidebar-elt a:hover, .sidebar-elt a:active {\n \
-      \    color: white;\n }\n\n .cards {\n     flex-grow: 1;\n\n     font-weight:\
-      \ bold;\n     font-color: #555;\n     font-size: 24px;\n\n     padding: 24px\
-      \ 16px;\n     max-width: 100%;\n }\n\n .cards > .anvil-container {\n     outline:\
-      \ none !important;\n }\n\n .cards .anvil-container .anvil-container,\n .designer\
-      \ .anvil-highlight .cards .anvil-container .anvil-container {\n     background-color:\
-      \ white;\n     box-shadow: 1px 2px 4px #888;\n\n     /* Font back to defaults\
-      \ */\n     font-weight: normal;\n     /*color: #333;*/\n     font-size: 14px;\n\
-      \n     outline: none;\n\n     padding: 7px 0;\n }\n\n .designer .anvil-highlight\
-      \ .cards .anvil-container .anvil-container .anvil-container,\n .cards .anvil-container\
-      \ .anvil-container .anvil-container {\n     box-shadow: none;\n     background-color:\
-      \ transparent;\n     padding: 0;\n }\n\n .designer .anvil-highlight .cards .anvil-container\
-      \ .anvil-container .anvil-container {\n     outline: 1px dashed rgba(0,0,0,0.3)\n\
-      \ }\n\n .body .instructions {\n     padding: 24px 16px;\n     font-size: 14px;\n\
-      \     text-align: center;\n     color: #666;\n }\n\n /* Responsive bits: Make\
-      \ the menu overlay the screen\n    (and hidden by default) rather than displacing\
-      \ it\n    on small screens\n  */\n\n @media(max-width:767px) {\n     .runner\
-      \ .sidebar {\n\t display: none;\n\t position: absolute;\n\t top: 62px;\n\t bottom:\
-      \ 0px;\n\t left: 0px;\n\t z-index: 2;\n     }\n\n     .runner .sidebar-click-guard\
-      \ {\n\t display: none;\n\t position: absolute;\n\t top: 62px;\n\t bottom: 0px;\n\
-      \t left: 0;\n\t right: 0;\n\t background-color: #888;\n\t opacity: 0.5;\n\t\
-      \ z-index: 1;\n     }\n\n     .designer .sidebar {\n\t max-width: 30%;\n   \
-      \  }\n\n     .sidebar.floating {\n\t top: 62px;\n     }\n\n     body.anvil-show-banner\
-      \ .sidebar.floating {\n\t top: 112px;\n     }\n\n     .cards {\n\t padding:\
-      \ 6px !important;\n     }\n\n }\n\n .sidebar.floating {\n     position: absolute;\n\
-      \     top: 62px;\n     bottom: 0px;\n     left: 0px;\n     z-index: 2;\n }\n\
-      \n body.anvil-show-banner .sidebar.floating {\n     top: 112px;\n }\n\n\n</style>\n\
-      \n<script>\n function toggleSidebar() {\n     var s = $('.sidebar');\n     if\
-      \ (!s.is(':hidden')) {\n\t $('.sidebar-click-guard').hide();\n\t s.addClass('floating').animate({left:\
-      \ -s.width()}, {complete: function() { s.hide(); }});\n     } else {\n\t $('.sidebar-click-guard').show();\n\
-      \t s.show().addClass('floating').css('left', '-100%').css('left', -s.width())\n\
-      \t  .animate({left: 0}, {complete: function() { s.removeClass('floating'); }});\n\
-      \     }\n }\n\n $(function() {\n     $('.sidebar').click(function() {\n\t if\
-      \ (window.innerWidth <= 767) {\n\t     toggleSidebar();\n\t }\n     });\n  \
-      \   $('.sidebar-click-guard').click(toggleSidebar);\n })\n</script>\n\n<!--\
-      \ Put body before nav so that it sits underneath -->\n\n<div class=\"body\"\
-      \ anvil-drop-default anvil-drop-container=\">.cards .anvil-container\" anvil-drop-redirect=\"\
-      >.cards > .placeholder\">\n    <div class=\"sidebar\" anvil-drop-redirect=\"\
-      >.drop-here\">\n\t<div anvil-slot-repeat=\"sidebar\" class=\"sidebar-elt\">\n\
-      \t    <div anvil-drop-here class=\"drop-here\"></div>\n\t    <div anvil-slot\
-      \ class=\"content\"></div>\n\t</div>\n\t<div class=\"sidebar-elt anvil-designer-only\
-      \ drop-here\" anvil-drop-slot=\"sidebar\">\n\t    <div class=\"content placeholder\"\
-      ><i class=\"glyphicon glyphicon-plus\"></i></div>\n\t</div>\n    </div>\n  \
-      \  <div class=\"sidebar-click-guard\"></div>\n\n    <div class=\"cards anvil-measure-content\"\
-      >\n\t<div anvil-if-slot-empty=\"default\"\n\t     anvil-drop-slot=\"default\"\
-      \n\t     class=\"placeholder\">\n\t    Drop a ColumnPanel here to add content\n\
-      \t</div>\n\n\t<div anvil-slot=\"default\"></div>\n\n\t<div class=\"anvil-designer-only\
-      \ instructions\">\n\t    <i class=\"fa fa-info-circle\"></i> Add\n\t    <img\
-      \ src=\"https://anvil.works/template-assets/column-panel-icon.png\" style=\"\
-      height: 30px; margin-right: -7px; margin-top: -5px\"> ColumnPanel components\
-      \ to create new cards.\n\t</div>\n    </div>\n</div>\n\n<div class=\"nav\" anvil-drop-redirect=\"\
-      .title.placeholder, .nav-elt.placeholder, .nav-elt .drop-here\">\n\n    <div\
-      \ class=\"nav-right\" anvil-drop-redirect=\".nav-elt\">\n\t<div anvil-slot-repeat=\"\
-      nav-right\" class=\"nav-elt\">\n\t    <div anvil-drop-here class=\"drop-here\"\
-      ></div>\n\t</div>\n\t<div class=\"nav-elt placeholder anvil-designer-only\"\
-      \ anvil-drop-slot=\"nav-right\">\n\t    <i class=\"glyphicon glyphicon-plus\"\
-      ></i>\n\t</div>\n    </div>\n\n    <div class=\"menu-btn\" onclick=\"toggleSidebar();\"\
-      >\n\t<i class=\"fa fa-bars\"></i>\n    </div>\n\n    <div anvil-if-slot-empty=\"\
-      title\" anvil-drop-slot=\"title\" class=\"title placeholder anvil-designer-only\"\
-      >\n\tDrop a title here\n    </div>\n    <div anvil-slot=\"title\" class=\"title\"\
-      ></div>\n</div>\n"}
+  properties: {html: '@theme:standard-page.html'}
