--- a/forms/_login.yaml
+++ b/forms/_login.yaml
@@ -18,3 +18,4 @@ components:
 container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html'}
+  event_bindings: {show: form_show}
