--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -17,6 +17,7 @@ components:
       visible: true, spacing_above: none, spacing_below: none, background: '#82abc7'}
     name: canvas_1
     layout_properties: {grid_position: 'BCMADU,KEUMME', full_width_row: true}
+    event_bindings: {show: canvas_1_show}
   event_bindings: {click: throw_button_click}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
