--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -10,7 +10,7 @@ components:
   layout_properties: {grid_position: 'JPNRLE,PNYQVO'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: 'Login (or create account):', font_size: null, font: '',
+    visible: true, text: 'Login (or create new account):', font_size: null, font: '',
     spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
     bold: false, underline: false, icon: ''}
   name: label_login_screen
@@ -87,7 +87,7 @@ components:
   name: spacer_2
   layout_properties: {grid_position: 'ZBCZAB,HUWQWR', row_background: ''}
 - type: CheckBox
-  properties: {role: null, width: default, align: left, border: '', enabled: true,
+  properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: true, text: Stay logged in (do not use on shared devices!),
     font_size: null, font: '', spacing_above: small, spacing_below: small, italic: false,
     background: '', bold: false, checked: true, underline: false}
