--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -1,8 +1,8 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: small,
-    background: ''}
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{"VSBJRI":30}',
+    spacing_below: small, background: ''}
 components:
 - type: ColumnPanel
   properties: {}
@@ -32,9 +32,9 @@ components:
   event_bindings: {click: explain_phone}
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: (123) 456-7890,
-    border: '', enabled: true, foreground: '', visible: true, text: '5555555555',
-    font_size: null, font: '', spacing_above: small, type: telephone, spacing_below: small,
-    italic: false, background: '', bold: false, underline: false}
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    font: '', spacing_above: small, type: telephone, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
   name: phone
   layout_properties: {grid_position: 'KWIYLI,OXHEKA'}
   event_bindings: {pressed_enter: phone_pressed_enter}
@@ -47,7 +47,7 @@ components:
   layout_properties: {grid_position: 'POHKFA,HZRNRF'}
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: password,
-    border: '', enabled: true, foreground: '', visible: true, text: password, font_size: null,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: password
@@ -82,24 +82,20 @@ components:
   name: user_name
   layout_properties: {grid_position: 'WAOBWA,QDVUDW'}
   event_bindings: {pressed_enter: go}
-- type: Spacer
-  properties: {height: 32}
-  name: spacer_2
-  layout_properties: {grid_position: 'ZBCZAB,HUWQWR', row_background: ''}
 - type: CheckBox
   properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: true, text: Stay logged in (do not use on shared devices!),
     font_size: null, font: '', spacing_above: small, spacing_below: small, italic: false,
     background: '', bold: false, checked: true, underline: false}
   name: persist
-  layout_properties: {grid_position: 'ZBCZAB,VSBJRI KRCBPN,VSEFWE'}
+  layout_properties: {grid_position: 'KRCBPN,VSEFWE'}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
     foreground: '', visible: true, text: Log in, font_size: 18, font: '', spacing_above: medium,
     icon_align: left, spacing_below: medium, italic: false, background: '', bold: true,
     underline: false, icon: ''}
   name: go_button
-  layout_properties: {grid_position: 'ZBCZAB,VSBJRI EPUGLR,JZBFVH', row_background: ''}
+  layout_properties: {grid_position: 'EPUGLR,JZBFVH', row_background: ''}
   event_bindings: {click: go, hide: go_button_hide}
 - type: Label
   properties: {role: null, width: default, align: center, border: '', foreground: '',
@@ -107,7 +103,7 @@ components:
     font_size: 10, font: '', spacing_above: small, icon_align: left, spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: confirmation_text_warn
-  layout_properties: {grid_position: 'ZBCZAB,VSBJRI IHGWDG,INPDNM'}
+  layout_properties: {grid_position: 'IHGWDG,INPDNM'}
 - type: CheckBox
   properties: {role: null, width: default, align: left, border: '', enabled: true,
     foreground: '', visible: true, text: 'Create a new account?', font_size: null,
