--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -13,13 +13,13 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
+      spacing_above: none, icon_align: left_edge, col_widths: '{"SJLVYU":50}', spacing_below: none,
       italic: false, background: '', bold: false, underline: false, icon: ''}
     name: game_summary
     layout_properties: {grid_position: 'VCCQBS,OLBDSW', full_width_row: true}
     components:
     - type: Label
-      properties: {role: null, width: default, align: left, border: '', foreground: '',
+      properties: {role: null, width: default, align: center, border: '', foreground: '',
         visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
