--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -8,7 +8,7 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: none, icon_align: left, col_widths: '{"RSPGUA":35,"KGTRPK":25}',
+      spacing_above: none, icon_align: left_edge, col_widths: '{"RSPGUA":35,"KGTRPK":25}',
       spacing_below: none, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: game_summary
