--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -1,6 +1,6 @@
 container:
   type: ColumnPanel
-  properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
+  properties: {role: game-list, width: default, border: 'True', foreground: '', visible: true,
     row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
 components:
