--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -38,6 +38,6 @@ components:
     event_bindings: {show: game_view_show}
 container:
   type: ColumnPanel
-  properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
+  properties: {role: game-list, width: default, border: 'True', foreground: '', visible: true,
     row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
