--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -1,8 +1,8 @@
 container:
   type: ColumnPanel
-  properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{"QGMGLS":20,"YOVYYG":21}',
-    spacing_below: none, background: ''}
+  properties: {role: game-animation, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: none,
+    background: ''}
 components:
 - type: Link
   properties: {role: null, width: default, align: left, border: '', foreground: '',
@@ -19,20 +19,6 @@ components:
     layout_properties: {grid_position: 'BCMADU,KEUMME', full_width_row: true}
     event_bindings: {show: canvas_1_show}
   event_bindings: {click: throw_button_click}
-- type: Label
-  properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: p0_name
-  layout_properties: {grid_position: 'FDTRQJ,QGMGLS', full_width_row: false}
-- type: Label
-  properties: {role: null, width: default, align: right, border: '', foreground: '',
-    visible: true, text: '', font_size: 13, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: p1_name
-  layout_properties: {grid_position: 'FDTRQJ,YOVYYG', full_width_row: false}
 - type: Timer
   properties: {interval: 0.2}
   name: timer_1
