--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -8,14 +8,14 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: none, icon_align: left_edge, col_widths: '{"RSPGUA":35,"KGTRPK":25}',
+      spacing_above: none, icon_align: left_edge, col_widths: '{"RSPGUA":30,"KGTRPK":30}',
       spacing_below: none, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: game_summary
     layout_properties: {}
     components:
     - type: Label
-      properties: {role: null, width: default, align: left, border: '', foreground: '',
+      properties: {role: null, width: default, align: center, border: '', foreground: '',
         visible: true, text: WALL, font_size: 16, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
@@ -23,7 +23,7 @@ components:
       layout_properties: {grid_position: 'JXMJZB,RSPGUA'}
       data_bindings: []
     - type: Label
-      properties: {role: null, width: default, align: right, border: '', foreground: '',
+      properties: {role: null, width: default, align: center, border: '', foreground: '',
         visible: true, text: '', font_size: 13, font: '', spacing_above: small, icon_align: left,
         spacing_below: small, italic: false, background: '', bold: false, underline: false,
         icon: ''}
