--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -1,6 +1,6 @@
 components:
 - type: LinearPanel
-  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+  properties: {role: game-container, width: default, border: '', foreground: '', visible: true,
     row_spacing: 10, spacing_above: none, spacing_below: none, background: ''}
   name: card_content
   layout_properties: {grid_position: 'XRVMCJ,PZWRJA', full_width_row: true}
@@ -8,31 +8,38 @@ components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
-      spacing_above: none, icon_align: left_edge, col_widths: '{"RSPGUA":30,"KGTRPK":30}',
-      spacing_below: none, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
+      spacing_above: none, icon_align: left_edge, col_widths: '{}', spacing_below: none,
+      italic: false, background: '', bold: false, underline: false, icon: ''}
     name: game_summary
     layout_properties: {}
     components:
-    - type: Label
-      properties: {role: null, width: default, align: center, border: '', foreground: '',
-        visible: true, text: WALL, font_size: 16, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
-      name: you_label
-      layout_properties: {grid_position: 'JXMJZB,RSPGUA'}
-      data_bindings: []
-    - type: Label
-      properties: {role: null, width: default, align: center, border: '', foreground: '',
-        visible: true, text: '', font_size: 13, font: '', spacing_above: small, icon_align: left,
-        spacing_below: small, italic: false, background: '', bold: false, underline: false,
-        icon: ''}
-      name: num_throws
-      layout_properties: {grid_position: 'JXMJZB,KGTRPK'}
+    - type: ColumnPanel
+      properties: {role: null, width: default, border: '', foreground: '', visible: true,
+        row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+        background: ''}
+      name: column_panel_1
+      layout_properties: {grid_position: 'JXMJZB,KGYHBS'}
+      components:
+      - type: Label
+        properties: {role: null, width: default, align: center, border: '', foreground: '',
+          visible: true, text: WALL, font_size: 16, font: '', spacing_above: small,
+          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
+        name: you_label
+        layout_properties: {grid_position: 'TESMPT,ANNGFL'}
+        data_bindings: []
+      - type: Label
+        properties: {role: null, width: default, align: center, border: '', foreground: '',
+          visible: true, text: '', font_size: 13, font: '', spacing_above: small,
+          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
+        name: num_throws
+        layout_properties: {grid_position: 'TESMPT,VXQENK'}
     event_bindings: {click: expand}
   - type: LinearPanel
-    properties: {role: null, width: default, border: '', foreground: '', visible: true,
-      row_spacing: 10, spacing_above: small, spacing_below: small, background: ''}
+    properties: {role: game-container, width: default, border: '', foreground: '',
+      visible: true, row_spacing: 10, spacing_above: small, spacing_below: small,
+      background: ''}
     name: game_view
     layout_properties: {grid_position: 'DBHMUX,XKHIAS', full_width_row: true}
     event_bindings: {show: game_view_show}
