--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -1,11 +1,11 @@
 container:
   type: ColumnPanel
-  properties: {role: game-animation, width: default, border: '', foreground: '', visible: true,
+  properties: {role: game-container, width: default, border: '', foreground: '', visible: true,
     row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
 components:
 - type: Link
-  properties: {role: null, width: default, align: left, border: '', foreground: '',
+  properties: {role: game-container, width: default, align: left, border: '', foreground: '',
     visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
     spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
@@ -13,7 +13,7 @@ components:
   layout_properties: {grid_position: 'OKBFUH,MQQUEU', full_width_row: true}
   components:
   - type: Canvas
-    properties: {role: null, width: default, height: '', border: '', foreground: '',
+    properties: {role: game-animation, width: default, height: '', border: '', foreground: '',
       visible: true, spacing_above: none, spacing_below: none, background: '#82abc7'}
     name: canvas_1
     layout_properties: {grid_position: 'BCMADU,KEUMME', full_width_row: true}
