--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -14,7 +14,7 @@ components:
   components:
   - type: Canvas
     properties: {role: game-animation, width: default, height: '', border: '', foreground: '',
-      visible: true, spacing_above: none, spacing_below: none, background: '#82abc7'}
+      visible: false, spacing_above: none, spacing_below: none, background: '#82abc7'}
     name: canvas_1
     layout_properties: {grid_position: 'BCMADU,KEUMME', full_width_row: true}
     event_bindings: {show: canvas_1_show}
