fixed structure of add_contacts

--- a/forms/ConfirmAccount.yaml
+++ b/forms/ConfirmAccount.yaml
@@ -62,6 +62,6 @@ components:
   event_bindings: {click: continue_button_click}
 container:
   type: ColumnPanel
-  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+  properties: {role: dialog, width: default, border: '', foreground: '', visible: true,
     row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: small,
     background: ''}
