--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -14,7 +14,7 @@ components:
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
       spacing_above: none, icon_align: left_edge, col_widths: '{"SJLVYU":50}', spacing_below: none,
-      italic: false, background: '', bold: false, underline: false, icon: ''}
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-right'}
     name: game_summary
     layout_properties: {grid_position: 'VCCQBS,OLBDSW', full_width_row: true}
     components:
